--- a/egpaper_final.tex
+++ b/egpaper_final.tex
@@ -132,7 +132,7 @@ we validate its performance on 3DObject dataset and PASCAL 2012 dataset.
 \label{sec:nz-who}
 \input{overview}
 
-\section{Pipeline}
+\section{On-the-Fly Template Generation}
 \label{sec:approach}
 \input{approach}
 
